--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
 </head>
 <body>
     <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid px-4">
-      <a class="navbar-brand text-white d-flex align-items-center" href="#">
-        <span class="logo-text"><img src="images/logo-nav.png" alt="Logo" class="logo me-2" /></span>
-      </a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-          <li class="nav-item"><a class="nav-link" href="#integrantes">Integrantes</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projeto">Projeto</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid px-4">
+        <a class="navbar-brand text-white d-flex align-items-center" href="#">
+          <span class="logo-text"><img src="images/logo-nav.png" alt="Logo" class="logo me-2" /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
+            <li class="nav-item"><a class="nav-link" href="#integrantes">Integrantes</a></li>
+            <li class="nav-item"><a class="nav-link" href="#projeto">Projeto</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+    
 
   <!-- Home -->
   <section class="hero" style="background-image: url(images/ondas.png);">
@@ -49,19 +53,19 @@
   <!-- Ícones -->
   <section class="section-icons">
     <div class="container">
-      <div class="row">
+      <div class="row mx-auto">
         <div class="col-md-4 icon-box">
-          <i class="bi bi-pencil-square"></i>
+          <i class="icon bi bi-pencil-square"></i>
           <h4 class="fw-bold mt-2">SOBRE</h4>
           <p>Clique aqui para conhecer mais sobre a equipe e nossa história!</p>
         </div>
         <div class="col-md-4 icon-box" id="integrantes">
-          <i class="bi bi-people-fill"></i>
+          <i class="icon bi bi-people-fill"></i>
           <h4 class="fw-bold mt-2">INTEGRANTES</h4>
           <p>Conheça um pouco mais sobre os integrantes da equipe e suas funções.</p>
         </div>
         <div class="col-md-4 icon-box" id="projeto">
-          <i class="bi bi-briefcase-fill"></i>
+          <i class="icon bi bi-briefcase-fill"></i>
           <h4 class="fw-bold mt-2">PROJETO</h4>
           <p>Saiba mais sobre o principal projeto da equipe.</p>
         </div>
@@ -72,9 +76,10 @@
   <!-- Sobre nós -->
   <section class="sobre-nos" id="sobre">
     <div class="container">
-    <h2 class="mb-4">SOBRE NÓS</h2>
+    <h2>SOBRE NÓS</h2>
+    <div class="mx-auto mb-4 divider"></div>
     <p class="px-3 px-md-5">A ollintech é uma equipe de tecnologia que surgiu na FATEC, para a realização de um trabalho, o Projeto Integrador, que visa o desenvolvimento de um sistema para a solução de algum problema, mas para isso era necessária a criação de uma logomarca e identidade visual.</p>
-    <img src="images/mockup-logo.png" alt="Logo" style="max-width: 550px;">
+    <img src="images/mockup-logo.png" alt="Logo" style="max-width: 43vw" class="mt-5">
     <div class="d-flex justify-content-center align-items-center mt-4 flex-column flex-md-row">
     </div>
     </div>
@@ -84,7 +89,7 @@
 <section class="py-5 text-white text-center" style="background-color: #2b2b2b;">
   <div class="container">
     <h2 class="mb-2">PALETA DE CORES</h2>
-    <div class="mx-auto mb-4" style="width: 200px; height: 4px; background-color: #D5238E; border-radius: 4px;"></div>
+    <div class="mx-auto mb-4 divider"></div>
 
     <p class="mb-5 px-md-5">
       Para as cores da nossa logomarca, nós, da equipe, pensamos num tom monocromático (variações de tom de uma cor), 
@@ -92,50 +97,7 @@
       “coringa”, um tom de preto mais claro, que inclusive é utilizado nesse website.
     </p>
 
-    <!-- Cartela de Cores -->
-    <div class="bg-white text-dark p-4 rounded-4 shadow d-inline-block">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <!-- Cor 1 -->
-        <div class="d-flex align-items-center gap-3">
-          <div class="rounded-circle" style="width: 50px; height: 50px; background-color: #590C3B;"></div>
-          <div>
-            <strong>#590C3B</strong><br>
-            rgb (82, 12, 59)<br>
-            CMYK (0.87,34,65)
-          </div>
-        </div>
-
-        <!-- Cor 2 -->
-        <div class="d-flex align-items-center gap-3">
-          <div class="rounded-circle" style="width: 50px; height: 50px; background-color: #891D5D;"></div>
-          <div>
-            <strong>#891D5D</strong><br>
-            rgb (137,29,93)<br>
-            CMYK (0.79,32,46)
-          </div>
-        </div>
-
-        <!-- Cor 3 -->
-        <div class="d-flex align-items-center gap-3">
-          <div class="rounded-circle" style="width: 50px; height: 50px; background-color: #D5238E;"></div>
-          <div>
-            <strong>#D5238E</strong><br>
-            rgb (213, 35, 142)<br>
-            CMYK (0.84,33,16)
-          </div>
-        </div>
-
-        <!-- Cor 4 -->
-        <div class="d-flex align-items-center gap-3">
-          <div class="rounded-circle" style="width: 50px; height: 50px; background-color: #1C1C1C;"></div>
-          <div>
-            <strong>#1C1C1C</strong><br>
-            rgb (28,28,28)<br>
-            CMYK (0, 0, 0, 89)
-          </div>
-        </div>
-      </div>
-    </div>
+    <img src="images/paleta.png" alt="paleta de cores" style="width: 45vw;">
   </div>
 </section>
 
@@ -144,48 +106,47 @@
 <section class="text-center py-5" style="background-color: #1e1e1e;">
   <h2 class="mb-2">TIPOGRAFIA</h2>
   <div class="container">
-  <div class="mx-auto mb-4" style="width: 200px; height: 4px; background-color: #D5238E; border-radius: 4px;"></div>
+  <div class="mx-auto mb-4 divider"></div>
   <p class="text-white px-4 px-md-5">
     A tipografia escolhida para a nossa marca foi a <strong>"Kanit"</strong>, uma fonte moderna e robusta
     que passa a ideia de tecnologia, inovação e confiança.
   </p>
   <div class="mt-4" style="font-family: 'Kanit', sans-serif;">
-    <h1 style="font-size: 80px;" class="text-white">Aa</h1>
-    <p class="text-white">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>0123456789 @#&!</p>
+    <img src="images/fonte.png" alt="fonte-kanit" style="width: 57vw;" class="mt-5">
   </div>
-</div>'"'
+</div>
 </section>
 
 <!-- Integrantes -->
 <section class="text-center py-5" style="background-color: #2b2b2b;">
-  <h2 class="mb-2">INTEGRANTES</h2>
-  <div class="mx-auto mb-4" style="width: 200px; height: 4px; background-color: #D5238E; border-radius: 4px;"></div>
   <div class="container">
-    <div class="row justify-content-center g-4">
+  <h2 class="mb-2">INTEGRANTES</h2>
+  <div class="mx-auto mb-4 divider"></div>
+    <div class="row justify-content-center g-4 mt-5">
       <!-- Card 1 -->
       <div class="col-md-3 col-6 mt-5">
-        <img src="images/ana.png" alt="Ana Flávia";>
+        <img src="images/ana.png" alt="Ana Flávia" class="image";>
         <h4 class="text-white fw-bold mt-3">Ana Flávia</h4>
         <p class="text-white small mb-0">Back-end</p>
         <p class="text-white small">3° DSM</p>
       </div>
       <!-- Card 2 -->
       <div class="col-md-3 col-6 mt-5">
-        <img src="images/gusta.png" alt="Gustavo Lanna";>
+        <img src="images/gusta.png" alt="Gustavo Lanna" class="image";>
         <h4 class="text-white fw-bold mt-3">Gustavo Lanna</h4>
         <p class="text-white small mb-0">UX-UI e front-end</p>
         <p class="text-white small">3° DSM</p>
       </div>
       <!-- Card 3 -->
       <div class="col-md-3 col-6 mt-5">
-        <img src="images/isa.png" alt="Isabely lemos";>
+        <img src="images/isa.png" alt="Isabely lemos" class="image";>
         <h4 class="text-white fw-bold mt-3">Isabely Lemos</h4>
         <p class="text-white small mb-0">Back-end</p>
         <p class="text-white small">3° DSM</p>
       </div>
       <!-- Card 4 -->
       <div class="col-md-3 col-6 mt-5">
-        <img src="images/yas.png" alt="Yasmin Pires";>
+        <img src="images/yas.png" alt="Yasmin Pires" class="image";>
         <h4 class="text-white fw-bold mt-3">Yasmin Pires</h4>
         <p class="text-white small mb-0">front-end</p>
         <p class="text-white small">3° DSM</p>
@@ -198,7 +159,7 @@
   <div class="container" style="height: 30vh;">
     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center mb-4">
       <div class="text-center me-md-4 mb-3 mb-md-0">
-        <img src="images/logo-footer.png" alt="logo" class="logo-img">
+        <img src="images/logo-footer.png" alt="logo" class="logo-img" style="width: 7vw;">
       </div>
       <div class="divider-ft d-none d-md-block"></div>
       <div class="text-center ms-md-4">
