--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="background-color: rgb(12, 12, 12);">
       <div class="container-fluid px-4">
         <a class="navbar-brand text-white d-flex align-items-center" href="#">
           <span class="logo-text"><img src="images/logo-nav.png" alt="Logo" class="logo me-2" /></span>
@@ -32,8 +32,8 @@
   <!-- Home -->
   <section class="hero" style="background-image: url(images/ondas.png);">
     <div class="container" style="height: 70vh;">
-        <div class="row align-items-center">
-          
+        <div class="row align-items-center" style="margin-left: 15vw; margin-top: 10vh;">
+        
           <!-- Logo -->
           <div class="col-md-6 text-center text-md-start mb-5 mb-md-0">
             <img src="images/logo.png" alt="Logo Ollintech" style="max-width: 300px;">
@@ -51,9 +51,9 @@
   </section>
 
   <!-- Ícones -->
-  <section class="section-icons">
-    <div class="container">
-      <div class="row mx-auto">
+  <section class="section-icons" style="max-height: 85vh;">
+    <div class="container" style="margin-top: 15vh;">
+      <div class="row mx-auto mt-5">
         <div class="col-md-4 icon-box">
           <i class="icon bi bi-pencil-square"></i>
           <h4 class="fw-bold mt-2">SOBRE</h4>
@@ -74,11 +74,11 @@
   </section>
 
   <!-- Sobre nós -->
-  <section class="sobre-nos" id="sobre">
+  <section class="section" id="sobre" style="background-color: #1e1e1e;">
     <div class="container">
     <h2>SOBRE NÓS</h2>
     <div class="mx-auto mb-4 divider"></div>
-    <p class="px-3 px-md-5">A ollintech é uma equipe de tecnologia que surgiu na FATEC, para a realização de um trabalho, o Projeto Integrador, que visa o desenvolvimento de um sistema para a solução de algum problema, mas para isso era necessária a criação de uma logomarca e identidade visual.</p>
+    <p class="px-3 px-md-5 pb-5">A ollintech é uma equipe de tecnologia que surgiu na FATEC, para a realização de um trabalho, o Projeto Integrador, que visa o desenvolvimento de um sistema para a solução de algum problema, mas para isso era necessária a criação de uma logomarca e identidade visual.</p>
     <img src="images/mockup-logo.png" alt="Logo" style="max-width: 43vw" class="mt-5">
     <div class="d-flex justify-content-center align-items-center mt-4 flex-column flex-md-row">
     </div>
@@ -86,7 +86,7 @@
   </section>
 
 <!-- Paleta de Cores -->
-<section class="py-5 text-white text-center" style="background-color: #2b2b2b;">
+<section class="py-5 text-white text-center section" style="background-color: #2b2b2b;">
   <div class="container">
     <h2 class="mb-2">PALETA DE CORES</h2>
     <div class="mx-auto mb-4 divider"></div>
@@ -103,7 +103,7 @@
 
 
 <!-- Tipografia -->
-<section class="text-center py-5" style="background-color: #1e1e1e;">
+<section class="text-center section" style="background-color: #1e1e1e;">
   <h2 class="mb-2">TIPOGRAFIA</h2>
   <div class="container">
   <div class="mx-auto mb-4 divider"></div>
@@ -111,14 +111,14 @@
     A tipografia escolhida para a nossa marca foi a <strong>"Kanit"</strong>, uma fonte moderna e robusta
     que passa a ideia de tecnologia, inovação e confiança.
   </p>
-  <div class="mt-4" style="font-family: 'Kanit', sans-serif;">
+  <div class="mt-5" style="font-family: 'Kanit', sans-serif;">
     <img src="images/fonte.png" alt="fonte-kanit" style="width: 57vw;" class="mt-5">
   </div>
 </div>
 </section>
 
 <!-- Integrantes -->
-<section class="text-center py-5" style="background-color: #2b2b2b;">
+<section class="text-center py-5 section" style="background-color: #2b2b2b;">
   <div class="container">
   <h2 class="mb-2">INTEGRANTES</h2>
   <div class="mx-auto mb-4 divider"></div>
